# NginxPMControl

./: .gitignore  BearerAuth.py  Dockerfile  README.md  compose.yml  docker-compose.yml  env_sample  main.py  ngnixpm_auth.py  ngnixpm_proxyhosts.py  pihole_api_dns.py  pihole_auth.py  pyproject.toml
.github/workflows/: Build docker-image manual.yml  Build docker-image.yml  docker-image.yaml
.streamlit/: config.toml
app/: glances_api.py  main.py
